; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_input_item_uri.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_input_item_uri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_input_item_uri to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_input_item_uri(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @vlclua_input_item_get_internal(i32* %4)
  %6 = call i8* @input_item_GetURI(i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @lua_pushstring(i32* %7, i8* %8)
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @free(i8* %10)
  ret i32 1
}

declare dso_local i8* @input_item_GetURI(i32) #1

declare dso_local i32 @vlclua_input_item_get_internal(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
